# ohos_car

./: BUILD.gn  README.md  bundle.json
RKNN_demo/: CMakeLists.txt  main.cc
RKNN_demo/rknn/runtime/Linux/librknn_api/include/: rknn_api.h  rknn_matmul_api.h
car_project/: BUILD.gn  REG.h  controller.c  controller.h  main.c  main.h  mode.c  mode.h  pthread_usr.c  pthread_usr.h  serial.c  serial.h  serial_base.c  serial_base.h  serial_protocol.c  serial_protocol.h  wit_c_sdk.c
car_project/camera_server/: BUILD.gn  main.cpp
car_project/camera_server/include/: preprocess.h  server.h  yolo.h
car_project/camera_server/src/: main_video.cc  postprocess.cc  preprocess.cc  server.cc  yolo.cc
oh_car/: BUILD.gn  controller.c  controller.h  main.c  main.h  pthread_usr.c  pthread_usr.h  serial.h  serial_base.h  serial_protocol.c  serial_protocol.h  wit_c_sdk.c
ohos_car_imu/: BUILD.gn  serial.c  serial.h
rk3588_camera/: BUILD.gn  camera.c  camera.h  main.c  opencv_dual_thread.cpp  opencv_sender.cpp
rk3588_gpio/: BUILD.gn  gpio.c  gpio.h  main copy.c  main.c
rk3588_i2c/: BUILD.gn  i2cinterface.c  i2cinterface.h
rk3588_imu/: BUILD.gn  main.c  serial.c
rk3588_ldlidar/: BUILD.gn  demo.cpp
rk3588_ldlidar/include/core/: ldlidar_datatype.h  ldlidar_driver.h
rk3588_ldlidar/include/serialcom/: serial_interface_linux.h
rk3588_ldlidar/src/core/: ldlidar_driver.cpp
rk3588_ldlidar/src/dataprocess/: lipkg.cpp
rk3588_ldlidar/src/filter/: tofbf.cpp
rk3588_ldlidar/src/serialcom/: serial_interface_linux.cpp
rk3588_pwm/: BUILD.gn  main.c  um_pwm.c  um_pwm.h
rk3588_tcp_client/: BUILD.gn  client copy.cpp  client.c
rk3588_tcp_server/: BUILD.gn  server copy.cpp  server.c
rk3588_uart/: BUILD.gn  main.c  serial_uart.c  serial_uart.h
test_serial_ex/: BUILD.gn  main.c  main.h  pthread_usr.c  pthread_usr.h  serial_base.c  serial_protocal.c  serial_protocal.h
