import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("warns") {
  cflags = [ "-Werror" ]
}

ohos_executable("test_serial") {
  install_enable = true
  output_name = "car_demo"
  sources = [
    "pthread_usr.c",
    "serial_base.c",
    "serial_protocol.c",
    "serial.c",
    "wit_c_sdk.c",
    "main.c",
    "controller.c"
  ]
  include_dirs = [ 
    "//commonlibrary/c_utils/base/include",
  "//mysample/ohos_car/oh_car" 
  ]
  configs = [ ":warns" ]
  external_deps = [
    "c_utils:utils",
    #"hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
  part_name = "ohos_car"
}
