import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("warns") {
  cflags = [ "-Werror" ]
}

ohos_executable("ohos_car_imu") {
  install_enable = true

  sources = [
    "main.c",
    "serial.c",
    "wit_c_sdk.c"
  ]
  include_dirs = [ "//commonlibrary/c_utils/base/include" ]
  configs = [ ":warns" ]
  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  output_name = "ohos_car_imu"
  install_images = [ "system" ]
  part_name = "my_samples"
}
