import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("lib_config") {
    cflags_cc = [
        "-frtti",
        "-fexceptions",
        "-DCVAPI_EXPORTS",
        "-DOPENCV_ALLOCATOR_STATS_COUNTER_TYPE=int",
        "-D_USE_MATH_DEFINES",
        "-D__OPENCV_BUILD=1",
        "-D__STDC_CONSTANT_MACROS",
        "-D__STDC_FORMAT_MACROS",
        "-D__STDC_LIMIT_MACROS",
        "-O2",
        "-Wno-error=header-hygiene",
    ]
}

ohos_executable("camera_test") {
  output_name = "opencv_sender"
  include_dirs = [
    "include",
    "//third_party/opencv/include",
    "//third_party/opencv/common",
    "//third_party/opencv/modules/core/include",
    "//third_party/opencv/modules/highgui/include",
    "//third_party/opencv/modules/imgcodecs/include",
    "//third_party/opencv/modules/imgproc/include",
    "//third_party/opencv/modules/calib3d/include",
    "//third_party/opencv/modules/dnn/include",
    "//third_party/opencv/modules/features2d/include",
    "//third_party/opencv/modules/flann/include",
    "//third_party/opencv/modules/ts/include",
    "//third_party/opencv/modules/video/include",
    "//third_party/opencv/modules/videoio/include",
    "//third_party/opencv/modules/ml/include",
    "//third_party/opencv/modules/objdetect/include",
    "//third_party/opencv/modules/photo/include",
    "//third_party/opencv/modules/stitching/include",
    "//third_party/opencv/build/opencv2",
    "//third_party/opencv/build"
  ]

  sources = [
    "opencv_sender.cpp",
  ]

  deps = [
    "//third_party/opencv",
    #"//foundation/arkui/napi:ace_napi",
    #"//drivers/hdf_core/adapter/uhdf2/platform:libhdf_platform"
  ]

  external_deps = [
    "c_utils:utils",
    #"hilog:libhilog",
    #"hdf_core:libhdf_utils",
  ]

  configs = [
    ":lib_config"
  ]

  relative_install_dir = "module"
  part_name = "ohos_car"
  install_enable = true
  install_images = [ "system" ]
}
