import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_executable("gpio_test") {
  output_name = "gpio_test"
  sources = [
    "main.c",
    "gpio.c",
  ]

  include_dirs = [ "//commonlibrary/c_utils/base/include" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "ohos_car"
}