import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("warns") {
  cflags = [ "-Werror" ]
}

ohos_executable("tcp_client") {
  install_enable = true
  output_name = "tcp_client"
  sources = [
    "client.c"
  ]
  include_dirs = [ 
    "//commonlibrary/c_utils/base/include",
    "serial_tcp.h"
  ]
  configs = [ ":warns" ]
  external_deps = [
    "c_utils:utils",
    #"hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
  part_name = "ohos_car"
}
