import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("warns") {
  cflags = [ "-Werror" ]
}

ohos_executable("test_serial_ex") {
  install_enable = true

  sources = [
    "main.c",
    "pthread_usr.c",
    "serial_base.c",
    "serial_protocal.c"
  ]
  include_dirs = [ "//commonlibrary/c_utils/base/include" ]
  configs = [ ":warns" ]
  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
  part_name = "ohos_car"
}
